--- a/quizz/templates/register.html
+++ b/quizz/templates/register.html
@@ -7,41 +7,30 @@
 
 {% block content %}
     <div class = "container container-div d-flex justify-content-center">
-        <form class = "login-form">
+        <form class = "login-form" method = "POST">
+            {% csrf_token %}
             <h1>Đăng kí</h1>
             <div class="form-group row">
-                <div class = "col-3">
-                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Họ">
+                <div class = "col-6">
+                    {{form.first_name}}
                 </div>
-                <div class = "col-9">
-                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Tên">
-                </div>
-            </div>
-            <div class = "row">
-                <div class = "col">
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Số điện thoại">
+                <div class = "col-6">
+                    {{form.last_name}}
                 </div>
             </div>
             <div class = "row">
                 <div class = "col">
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Email">
+                    {{form.username}}
                 </div>
             </div>
             <div class = "row">
                 <div class = "col">
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    {{form.password1}}
                 </div>
             </div>
             <div class = "row">
-                <div class = "col-3">
-                        <select class="form-select form-select-medium" name="" id="">
-                            <option selected disabled>JLPT</option>
-                            <option value="">N1</option>
-                            <option value="">N2</option>
-                            <option value="">N3</option>
-                            <option value="">N4</option>
-                            <option value="">N5</option>
-                        </select>
+                <div class = "col">
+                    {{form.password2}}
                 </div>
             </div>
             <div class = "form-group">
@@ -51,8 +40,7 @@
                     Đã có tài khoản?, đăng nhập <a href="{% url 'quizz:Login' %}">tại đây</a>
                 </p>
             </div>
-            </div>
-            
+            </div> 
         </form>
     </div>
     <link rel="stylesheet" href="{% static 'css/register.css' %}">
