--- a/quizz/templates/login.html
+++ b/quizz/templates/login.html
@@ -10,8 +10,8 @@
         <form class = "login-form">
             <h1>Đăng nhập</h1>
             <div class="form-group">
-            <label for="exampleInputEmail1">Email</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <label for="exampleInputEmail1">Username</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
             </div>
             <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
