--- a/quizz/templates/pages/teacher.html
+++ b/quizz/templates/pages/teacher.html
@@ -39,7 +39,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{exam.name}}</h5>
                     <p>Cấp độ: {{exam.level.name}}</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="{{exam.get_detail}}" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
             {% endfor %}
