--- a/quizz/templates/part/add_exam_detail.html
+++ b/quizz/templates/part/add_exam_detail.html
@@ -1,5 +1,5 @@
 <div class="container exam-part">
-    <h2>Chi tiết đề thi</h2>
+    <h2>Chi tiết đề thi hehe</h2>
     <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
           {% comment %} hx-get = "{% url 'quizz:AddExamPartForm' pk=exam.id %}"  {% endcomment %}
