--- a/quizz/templates/part/detail_group_question.html
+++ b/quizz/templates/part/detail_group_question.html
@@ -1,5 +1,21 @@
-<div>
-    {{group.name}}
-    <button class "btn btn-danger">Delete</button>
-    <button class "btn btn-success">Edit</button>
+{% load static %}
+<div class = "group-question">
+    <div class = "row d-inline-flex flex-col">
+        <input type="text" name="" id="group-name" class = "border-0 col-11" value = "{{group.content}}">
+        <div class="col-1 d-flex justify-content-center align-item-center">
+            <button class = "btn btn-outline-danger border-0" ><i class="bi bi-trash3"></i></button>
+            <button class = "btn btn-outline-success border-0" hx-get = "{% url 'quizz:AddQuestionForm' pk=group.id %}" hx-target = "#question-list" hx-swap = "beforeend"><i class="bi bi-plus-lg"></i></button>
+        </div>
+    </div>
+    <div class = "d-inline-flex flex-column container" id = "question-list">
+        {% if group.questions %}
+        {% for question in group.questions %}
+        {% include 'part/detail_question.html' with question=question %}
+        {% endfor %}
+  {% else %}
+    
+  {% endif %}
+    </div>
+
+  <link rel="stylesheet" href="{% static 'css/detail_group_question.css' %}">
 </div>
