--- a/quizz/templates/part/group_question_form.html
+++ b/quizz/templates/part/group_question_form.html
@@ -2,6 +2,7 @@
     <form action="" method = "POST" enctype="multipart/form-data"> 
         {% csrf_token %}
         {{form.as_p}}
-        <button hx-post = {% url 'quizz:GroupQuestionForm' pk=part_id %} type = "submit">Save</button>
+        <button class = "btn btn-success" hx-post = {% url 'quizz:GroupQuestionForm' pk=part_id %} type = "submit">Save</button>
+        <button class = "btn btn-outline-danger" hx-post = {% url 'quizz:DeleteForm'%}>Delete form</button>
     </form>
 </div>
